docs/docs/commands/0.3/commands.md
# Command Reference

Like `git` the `gameta` command delegates to subcommand groups based on its
first argument. There are several subcommand groups:

1. gameta init
2. gameta sync
3. gameta repo
4. gameta tags
5. gameta params
6. gameta apply
7. gameta cmd
8. gameta exec
9. gameta const
10. gameta venv
11. gameta schema

___
**Note**
    
Bolded flags/arguments indicate that they are required, while italicised 
arguments indicate that they accept multiple arguments
___

## gameta

Main CLI group, loads .gameta files and delegates subcommands to other groups

### Arguments

* --project-dir / -d: Absolute path to a metarepository, defaults to the current working 
directory
* --version / -v: Prints the current version of Gameta

## gameta init

Initialises the folder as a metarepo, searches for a .git folder and attempts
to populate the project name and Git URL from the .git folder. 

### Arguments

* --git / -g: Indicates that Gameta should initialise this folder as a git 
  repository
* --overwrite / -o: Indicates that Gameta should overwrite the existing .gameta file 
  with new data

## gameta sync

Syncs all child repositories specified in the .gameta file locally.

## gameta repo

Repository subcommand group for managing repositories, contains the 
following commands:

1. gameta repo add
2. gameta repo delete
3. gameta repo update
4. gameta repo ls

### gameta repo add

Adds a new child repository to the .gameta file and clone it. 

___
**Note**

If the repository is already cloned to the path provided, then Gameta will 
attempt to extract its details and match them against the arguments that user
provides before adding it to the .gameta file.
___

#### Arguments

* **--name / -n**: Name of the child repository to be stored
* **--url / -u**: URL of the child repository to be stored
* **--path / -p**: Relative local path within the project directory to clone the child repository to
* --overwrite / -o: Indicates that Gameta should overwrite the repository details in the .gameta file
    if they exist

### gameta repo delete

Deletes an existing child repository from the .gameta file and its local clone.

#### Arguments

* **--name / -n**: Name of the child repository to be deleted
* --no-clear / -c: Indicates that Gameta should not clear the local clone of the repository

### gameta repo update

Updates repository details and syncs the changes locally

#### Arguments

* **--name / -n**: Name of the child repository to be updated
* --new-name / -e: New repository name to be updated to
* --new-url / -u: New repository URL to be updated to
* --new-path / -p: New local relative path within the project directory to update to
* --no-sync / -s: Does not apply updates locally

### gameta repo ls

Lists all repositories added

## gameta tags

Tags subcommand group for managing repository tags, contains the 
following commands:

1. gameta tags add
2. gameta tags delete

### gameta tags add

Adds/updates tags of a particular repository.

#### Arguments

* **--name / -n**: Name of the child repository to add tags to
* **_--tags / -t_**: Tags to be added to the child repository

### gameta tags delete

Deletes selected tags from a particular repository.

___
**Note**

The "metarepo" tag of the metarepo cannot be deleted 
___

#### Arguments

* **--name / -n**: Name of the child repository to delete tags from
* **_--tags / -t_**: Tags to be deleted from the child repository

## gameta params

Parameters subcommand group for adding repository parameters, contains 
the following commands:

1. gameta params add
2. gameta params delete

### gameta params add

Adds a new set of parameters to all repositories, this can be done in 2 ways:

1. User-prompt for each repository (default)
2. Providing a default value that will be applied to all repositories

___
**Note**

If users choose a dict/list parameter types, then they need to input their
parameter values as JSON decodable strings e.g. `'{"hello": "world"}'` or
`'["hello", "world"]'`
___

___
**Note**
   
Environment variables parameters are acceptable parameter values. These parameter 
values will be substituted by the appropriate environment variables. For example 
the following `gameta params` command below is acceptable:

```shell
gameta params add -p branch -y -v '${BITBUCKET_BRANCH}'
```

This will result in the configuration below:

```json
{
  "projects": {
    "gameta": {
      "path": ".",
      "tags": ["metarepo"],
      "url": "https://github.com:genius-systems/gameta.git",
      "branch": "${BITBUCKET_BRANCH}"
    }
  }
}
```

And the branch parameter for gameta will be resolved to the `${BITBUCKET_BRANCH}` 
environment variable
___

#### Arguments

* **--param / -p**: Name of the parameter to be added to each repository
* --type / -t: Parameter type to be added for each repository, users can only choose one
    of the following: int, float, str (default), bool, dict, list
* --value / -v: Default value to be added for each repository in the event users input an
    invalid command when prompted or skip prompt entirely. Defaults to None
* --skip-prompt / -y: Skips user prompt and adds the default value to all parameter fields

### gameta params delete

Deletes a parameter set from all repositories.

#### Arguments
 
* **--param / -p**: Name of the parameter to be deleted

## gameta apply

Applies a set of CLI commands to a specified set of repositories (see 
[Applying Commands])

### Arguments

* **_--command / -c_**: CLI commands to be applied
* _--tags / -t_: Tagged repositories to apply CLI commands to
* _--repositories / -r_: Names of specific repositories to apply CLI commands to
* --venv / -ve: Activates the specified virtual environment and executes the CLI commands
* --all / -a: Indicates that the CLI commands should applied to all repositories
* --shell / -s: Indicates that the CLI commands should be executed in a separate shell
* --python / -p: Indicates that the commands are Python scripts and should be executed 
    with a Python 3 interpreter
* --verbose / -v: Indicates that Gameta should display the CLI output when it executes a
    CLI command in other repositories
* --raise-errors / -e: Indicates that Gameta should terminate and raise errors that occur
    when executing CLI commands in child repositories 

___
**Note**
   
The CLI command is executed in the meta-repository by default, to apply it to other
repositories, users may use the following functionalities to specify repositories

1. `--repositories / -r ` to explicitly specify repositories 
2. `--tags / -r` to apply to repositories with tagged with the tag
3. `--all / -a` to apply to all repositories  
___

___
**Note**
   
The shell flag is required if the CLI command to be rendered is a piped CLI command
or if the `cd` command is used. It will also be automatically added if multiple CLI
commands are provided.
___

___
**Note**
   
Python scripts are entered as is, use `''` to help enter multi-line Python scripts and
handle imports. This approach also works for more complex shell scripts. An example is
provided below.
```shell
gameta apply -p -c '
from os import getcwd
print(getcwd())
'
```
___

___
**Note**
   
Activate a virtual environment to provide access to Python packages or CLI commands 
installed in the virtual environment.
___

___
**Note**
   
A special variable **\_\_repos\_\_** is reserved to provide access to repository details
when using Python scripts. This variable should **only be used in Python scripts** as 
it causes issues when substituted into shell parameters.
___

## gameta cmd

Command subcommand group for managing gameta commands, contains 
the following commands:

1. gameta cmd add
2. gameta cmd delete
3. gameta cmd update
4. gameta cmd ls

### gameta cmd add

Adds a Gameta command to the Gameta command store within the .gameta file

___
**Note**

A Gameta command is a `gameta apply` command consisting of a set of CLI commands, tags, 
repositories and flags (shell, python, verbose, raise errors) that control its execution
___

___
**Note**
   
If the Python flag is entered, Gameta will check if the Python scripts entered are valid.
All commands **must** be Python scripts if the Python flag is used.
___

#### Arguments 
* **--name / -n**: Name 
* --description / -d: Brief description of the Gameta command
* --overwrite / -o: Indicates that Gameta should overwrite the existing .gameta file 
    with new data
* **_--command / -c_**: CLI commands to be applied
* _--tags / -t_: Tagged repositories to apply CLI commands to
* _--repositories / -r_: Names of specific repositories to apply CLI commands to
* --venv / -ve: Activate the specified virtual environment and execute the CLI commands
* --all / -a: Indicates that the CLI command shouuld be applied to all repositories
* --shell / -s: Indicates that the CLI command should be executed in a separate shell
* --python / -p: Indicates that the commands are Python scripts and should be executed 
with the Python 3 interpreter
* --verbose / -v: Indicates that Gameta should display the CLI output when it executes a
    CLI command in other repositories
* --raise-errors / -e: Indicates that Gameta should terminate and raise errors that occur when
    executing CLI commands in child repositories 

### gameta cmd delete

Deletes a Gameta command from the Gameta command store

#### Arguments
* **--name / -n**: Name of the Gameta command to be deleted

### gameta cmd update

Updates a Gameta command that exists in the Gameta command store

___
**Note**
   
If the Python flag is set, Gameta will check if the Python scripts entered are valid.
If the Python flag is unset, Gameta will check that all the CLI commands are not Python
compilable.
___

#### Arguments
* **--name / -n**: Gameta command name to be updated
* --description / -d: Brief description of the Gameta command to be updated
* _--command / -c_: New CLI commands to be executed
* _--tags / -t_: New repository tags apply CLI commands to
* _--repositories / -r_: New repositories to apply CLI commands to
* --venv / -ve: Activate specified virtual environment and execute commands
* --all / -a: Execute the command for all repositories
* --no-all / -na: Do not execute the command for all repositories, 
tag/repositories/default configuration will apply
* --verbose / -v: Display execution output when CLI commands are applied
* --no-verbose / -nv: Do not display execution output when CLI commands are applied
* --shell / -s: Execute CLI commands in a separate shell
* --no-shell / -ns: Do not execute CLI commands in a separate shell
* --python / -p: Execute as Python scripts with the Python 3 interpreter
* --no-python / -np: Do not execute as Python scripts
* --no-shell / -ns: Do not execute CLI commands in a separate shell
* --raise-errors / -e: Raise errors that occur when CLI commands are executed and 
    terminate
* --no-errors / -ne: Do not raise errors that occur when CLI commands are executed 
    and terminate

### gameta cmd ls

Lists all existing Gameta commands in the Gameta command store

## gameta exec

Executes a sequence of Gameta commands from the command store

#### Arguments
* **_--commands / -c_**: Gameta commands to be executed

## gameta const

Constants subcommand group for managing Gameta constants, contains
the following commands:

1. gameta const add
2. gameta const delete

### gameta const add

Adds/Updates constants in the constants store

___
**Note**
   
Constants are applied consistently across all repositories, while parameters are unique
to each repository. Hence to distinguish between parameters which are unique, constants
are all converted to uppercase.
___

___
**Note**
   
Constants can be added with a '$' symbol e.g. `$BRANCH`. These constants will be 
automatically substituted with the corresponding environment variables extracted 
from the environment i.e. the resultant substitution from the constant store and
run-time environment configuration below is `world`.

```json
{
  "constants": {
    "$BRANCH": "hello"
  }
}
``` 

```shell
export BRANCH=world
```
___

### Arguments
* **--name / -n**: Name of the Gameta constant to be added
* **--type / -t**: Type of the Gameta constant (int, float, bool and str) to be added
* **--value / -v**: Value of the Gameta constant to be added

___
**Note**
   
Gameta constants only support basic types, these will be used to interpret the 
constant value that the user inputs. Hence the type has to be one of the 4 types 
below:

1. *int*: Integer
2. *float*: Floating Point
3. *bool*: Boolean
4. *str*: String
___

### gameta const delete

Deletes an existing constant from the constants store

### Arguments
* **--name / -n**: Name of the Gameta constant to be deleted
___
**Note**
   
The constant name can be provided in either lowercase or uppercase.
___

## gameta venv

Virtualenv subcommand group for managing virtual environments, 
contains the following commands:

1. gameta venv create
2. gameta venv register
3. gameta venv unregister

### gameta venv create

Creates a new virtual environment within the project directory

### Arguments
* **--name / -n**: Name of the virtual environment to be created
* --directory / -d: Relative directory of the virtual environment
    to be created
* --overwrite / -o: Overwrites the current directory when virtual 
    environment is created
* --site-packages / -s: Include a copy of all system site-packages
    in virtual environment
* --no-pip / -np: Does not include a copy of pip in the virtualenv
* --symlinks / -l: Uses symlinks to the Python executor

___
**Note**
   
Virtual environment names can only be stored with alphanumeric 
characters and the special characters '-' and '_'.
___

### gameta venv register

Registers a new virtual environment in the .gameta file

### Arguments
* **--name / -n**: Name of the virtual environment to be registered
* **--path / -p**: Absolute path to the virtual environment
* --overwrite / -o: Overwrites a registered virtual environment

___
**Note**
   
Virtual environment names can only be stored with alphanumeric 
characters and the special characters '-' and '_'.
___
___
**Note**
   
Users may have created their own virtual environments e.g. with 
pyenv or conda, and would like Gameta to use these virtual environments. 
`gameta venv register` enables this functionality by storing a reference
to the virtual environments and sourcing it before execution.
___

### gameta venv unregister

Unregisters an existing virtual environment in the .gameta file

### Arguments
* **--name / -n**: Name of the virtual environment to be registered
* --delete / -d: Deletes the virtual environment

## gameta schema

Schema subcommand group for validating and updating schemas, contains
the following commands:

1. gameta schema validate
2. gameta schema update
3. gameta schema ls

### gameta schema validate

Validates the .gameta file data according to a specified schema 
version, printing all validation errors for debugging

### Arguments
* --path / -p: Absolute path to the .gameta file to be validated
* --verbose / -v: Prints verbose error details
* --schema-version / -s: Specified schema version, defaults to the 
  latest gameta version installed
  
### gameta schema update

Updates the .gameta file data to the specified schema version

___
**Note**
   
Does not support downgrading of .gameta file schema versions. 
___
___
**Note**
   
This command can only be performed if the .gameta file data is 
validated against the existing schema. Run `gameta schema validate`
to fix all validation issues before updating
___
___
**Note**
   
Users can only update the schema to a schema version that is 
supported by the current gameta version, use `gameta schema ls` to
list all supported schema versions
___

### Arguments
* --path / -p: Absolute path to the .gameta file to be updated
* --schema-version / -s: Specified schema version to be updated to, 
  defaults to the latest gameta version installed 

### gameta schema ls

Lists all supported schema versions that this version of gameta
supports

[Applying Commands]: ../../user_guide/applying_commands.md